--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* header styles start */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', sans-serif;
@@ -38,7 +39,9 @@ header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
+/* header styles end */
 
+/* link and paragraph styles */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -48,6 +51,7 @@ p {
     font-size: 16px;
 }
 
+/* hero styles */
 .hero {
     height: 800px;
     width: 100%;
@@ -55,6 +59,22 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+
+/* content styles start */
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.content img {
+    max-height: 200px;
+}
+
+.content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 .float-left {
@@ -66,13 +86,10 @@ p {
     float: right;
     margin-left: 25px;
 }
+/* content styles end */
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
 
+/* benefits styles start */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -109,16 +126,9 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+/* benefits styles end */
 
-.content img {
-    max-height: 200px;
-}
-
-.content h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* footer styles start */
 footer {
     padding: 30px;
     clear: both;
@@ -126,6 +136,7 @@ footer {
     text-align: center;
 }
 
-footer h2 {
+footer h4 {
     font-size: 20px;
 }
+/* footer styles end */
